fixed spinner right spacing issue in responsive

--- a/src/app/modules/public-user-view/components/public-user-view/public-user-view.component.scss
+++ b/src/app/modules/public-user-view/components/public-user-view/public-user-view.component.scss
@@ -27,7 +27,7 @@
           padding-right: 32px;
           padding-bottom: 8px;
         }
-    
+
         .searchIcon{
             position: absolute;
             top: 0;
@@ -55,13 +55,13 @@
       ::placeholder {
         color: white;
         // padding-left: 3rem;
-       
-    
+
+
       }
       .span-class{
           flex:2
       }
-    
+
       .align-icon {
         margin-right: 0px;
         margin-left: auto;
@@ -82,31 +82,31 @@
       @media only screen and (max-width:510px) {
         .search-container{
             display: none;
-       
+
           }
           ::placeholder{
             color: black !important;
             // padding-left: 3rem;
-          
+
           }
           .scroll-infinite{
             padding-top: 0px !important;
-       
-            }      
-              
+
+            }
+
       }
-    
+
       .allign-search-icon{
           display: flex;
           justify-content: space-between;
       }
-      
+
       @media only screen and (min-width: 760px) and (max-width:1024px) {
         .search-container{
             padding-right: 0;
         //    border: 1px red solid;
           }
-        
+
       }
     // .scroll-infinite{
     //     // margin-top: 58px;
@@ -120,15 +120,15 @@
         }
     }
 
-    @media screen and (max-width: 768px) {   
+    @media screen and (max-width: 768px) {
         .maticonallign {
-        
+
           overflow: hidden;
         }
     }
 
     @media screen and (max-width: 375px) {
-    
+
         .maticonallign {
           // border: thick double yellow;
           overflow-x: hidden;
@@ -136,13 +136,13 @@
     }
 
     .search-container-mobile{
-   
+
         padding-right: 1.5rem;
-        padding-top: 8px;      
+        padding-top: 8px;
 
     }
 .mat-card.blogs-containers{
-    padding: 16px 0px 16px 0px !important;    
+    padding: 16px 0px 16px 0px !important;
 
 }
 
@@ -223,7 +223,7 @@
     align-items: center;
     box-shadow: 1px 1px 10px 0 #FFD180;
     background-color: #FFD180;
-   
+
     }
     .alertmsg{
     width: 89%;
@@ -234,19 +234,22 @@
   z-index: 999;
   height: 2em;
   width: 2em;
-    } 
+    @include breakpoint-xs {
+            left: 45%;
+        }
+    }
     @media only screen and (min-width: 760px) and (max-width:1024px) {
     .search-container{
     padding-right: 0;
     // border: 1px red solid;
     }
-    
+
     }
     .scroll-infinite{
     // padding-top: 58px;
     padding-bottom:160px;
     }
-  
+
 
 .parent-card-container{
     width: 90%;
